--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,7 +8,7 @@
 <div class="fixed inset-0 grid grid-cols-8 sm:grid-cols-10 md:grid-cols-12 lg:grid-cols-[repeat(16,minmax(0,1fr))] xl:grid-cols-[repeat(20,minmax(0,1fr))] auto-rows-fr">
   <% @public_photos.each do |photo| %>
     <%= link_to public_photo_path(photo.short_code), class: "block overflow-hidden hover:opacity-80 transition-opacity" do %>
-      <%= image_tag url_for(photo.file.variant(resize_to_fill: [80, 80])),
+      <%= image_tag public_thumbnail_path(photo.short_code),
           class: "w-full h-full object-cover",
           loading: "lazy" %>
     <% end %>
