✨ Add footer to landing page

--- a/app/views/layouts/landing.html.erb
+++ b/app/views/layouts/landing.html.erb
@@ -11,7 +11,7 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body class="bg-white min-h-screen overflow-hidden">
+  <body class="bg-white min-h-screen">
     <%= yield %>
   </body>
 </html>
