--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -80,20 +80,18 @@
       </nav>
     <% end %>
 
-    <% if notice.present? || alert.present? %>
-      <div class="<%= user_signed_in? ? 'mt-14' : '' %> max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 pt-4" data-controller="notification">
-        <% if notice %>
-          <div class="bg-green-50 border border-green-200 text-green-700 px-4 py-3 rounded-lg mb-4">
-            <%= notice %>
-          </div>
-        <% end %>
-        <% if alert %>
-          <div class="bg-red-50 border border-red-200 text-red-700 px-4 py-3 rounded-lg mb-4">
-            <%= alert %>
-          </div>
-        <% end %>
-      </div>
-    <% end %>
+    <div id="flash_messages" class="<%= user_signed_in? ? 'mt-14' : '' %> max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 pt-4">
+      <% if notice.present? %>
+        <div class="bg-green-50 border border-green-200 text-green-700 px-4 py-3 rounded-lg mb-4" data-controller="notification">
+          <%= notice %>
+        </div>
+      <% end %>
+      <% if alert.present? %>
+        <div class="bg-red-50 border border-red-200 text-red-700 px-4 py-3 rounded-lg mb-4" data-controller="notification">
+          <%= alert %>
+        </div>
+      <% end %>
+    </div>
 
     <main class="<%= user_signed_in? ? 'pt-14' : '' %> flex-1">
       <%= yield %>
